--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,8 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(BIMCM_CACHE_TEST)
+ 
+IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
+	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
+	PROJECT(BIMCM_CACHE_TEST)
+ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../")
 FIND_PACKAGE(BIMCM)
@@ -10,10 +13,17 @@ INCLUDE("${CMAKE_CURRENT_LIST_DIR}/TEST.cmake")
 
 
 FUNCTION(RUN_TEST test)
-	EXECUTE_PROCESS(
-		COMMAND "${CMAKE_COMMAND}" .
-		WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/${test}"
-	)
+	IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
+		EXECUTE_PROCESS(
+			COMMAND "${CMAKE_COMMAND}" -D .
+			WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/${test}"
+		)
+	ELSE()
+		EXECUTE_PROCESS(
+			COMMAND "${CMAKE_COMMAND}" -P CMakeLists.txt
+			WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/${test}"
+		)
+	ENDIF()
 ENDFUNCTION()
 
 
