--- a/test/DEPENDENCY/argument_missing/CMakeLists.txt
+++ b/test/DEPENDENCY/argument_missing/CMakeLists.txt
@@ -10,8 +10,10 @@
 
 
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(BIMCM_ARCHIVE_TEST)
+IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
+	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
+	PROJECT(BIMCM_ARCHIVE_TEST)
+ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
 FIND_PACKAGE(BIMCM)
