--- a/test/PARSE_ARGUMENTS/CMakeLists.txt
+++ b/test/PARSE_ARGUMENTS/CMakeLists.txt
@@ -1,5 +1,8 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(BIMCM_CACHE_TEST)
+
+IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
+	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
+	PROJECT(BIMCM_CACHE_TEST)
+ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
 FIND_PACKAGE(BIMCM)
