--- a/test/STORAGE/CMakeLists.txt
+++ b/test/STORAGE/CMakeLists.txt
@@ -1,5 +1,8 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(BIMCM_ENV_TEST)
+
+IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
+	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
+	PROJECT(BIMCM_ENV_TEST)
+ENDIF()
 
 GET_CMAKE_PROPERTY(orig_variable_names VARIABLES)
 LIST(SORT orig_variable_names)
