--- a/example/ARCHIVE/CMakeLists.txt
+++ b/example/ARCHIVE/CMakeLists.txt
@@ -4,10 +4,10 @@
 #
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(BIMCM_CACHE_TEST)
+PROJECT(CMLIB_CACHE_TEST)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 
 
@@ -16,7 +16,7 @@ FIND_PACKAGE(BIMCM)
 # ARCHVI_TYPE will be determined from archive_name
 #
 FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive.bz2/")
-BIMCM_ARCHIVE_EXTRACT(
+CMLIB_ARCHIVE_EXTRACT(
 	ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/archive/archive.bz2"
 	OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive.bz2/"
 )
@@ -27,7 +27,7 @@ BIMCM_ARCHIVE_EXTRACT(
 # AUTO deduction of ARCHIVE_TYPE is done by file extension
 #
 FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive_bz2/")
-BIMCM_ARCHIVE_EXTRACT(
+CMLIB_ARCHIVE_EXTRACT(
 	ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/archive/archive_bz2"
 	ARCHIVE_TYPE BZ2
 	OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive_bz2/"
@@ -37,7 +37,7 @@ BIMCM_ARCHIVE_EXTRACT(
 # We can extract multi archives (tar.bz2, tar.gz).
 #
 FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive.tar.bz2/")
-BIMCM_ARCHIVE_EXTRACT(
+CMLIB_ARCHIVE_EXTRACT(
 	ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/archive/archive.tar.bz2"
 	OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive.tar.bz2/"
 )
@@ -47,7 +47,7 @@ BIMCM_ARCHIVE_EXTRACT(
 # we must explicitly specify ARCHIVE_TYPE.
 #
 FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive.tar.bz2_tar_only/")
-BIMCM_ARCHIVE_EXTRACT(
+CMLIB_ARCHIVE_EXTRACT(
 	ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/archive/archive.tar.bz2"
 	ARCHIVE_TYPE BZ2
 	OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/archive.tar.bz2_tar_only/"
