--- a/example/FILE_DOWNLOAD/CMakeLists.txt
+++ b/example/FILE_DOWNLOAD/CMakeLists.txt
@@ -1,8 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(BIMCM_CACHE_TEST)
+PROJECT(CMLIB_CACHE_TEST)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 SET(VALID_HTTP_URI "http://bimproject.cz/")
 SET(VALID_HTTP_PLUGIN_URI "http://bimproject.cz/data/plugins/release/BPC.AC.WIN.zip")
@@ -15,7 +15,7 @@ SET(VALID_GIT_DIRECTORY_PATH   "cmake/")
 #
 # Download directory from git
 #
-BIMCM_FILE_DOWNLOAD(
+CMLIB_FILE_DOWNLOAD(
 	URI         "${VALID_GIT_URI}"
 	GIT_PATH    "${VALID_GIT_DIRECTORY_PATH}"
 	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/git_directory"
@@ -24,7 +24,7 @@ BIMCM_FILE_DOWNLOAD(
 #
 # Download GIT directory to another dir in filesystem
 #
-BIMCM_FILE_DOWNLOAD(
+CMLIB_FILE_DOWNLOAD(
 	URI         "${VALID_GIT_URI}"
 	GIT_PATH    "${VALID_GIT_DIRECTORY_PATH}"
 	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/git_directory/second"
@@ -34,7 +34,7 @@ BIMCM_FILE_DOWNLOAD(
 # Download file from GIT and store it
 # under original name.
 #
-BIMCM_FILE_DOWNLOAD(
+CMLIB_FILE_DOWNLOAD(
 	URI         "${VALID_GIT_URI}"
 	GIT_PATH    "${VALID_GIT_FILE_PATH}"
 	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/"
@@ -44,7 +44,7 @@ BIMCM_FILE_DOWNLOAD(
 # Download file from GIT and store it
 # under UTILS_NEW_NAME.cmake
 #
-BIMCM_FILE_DOWNLOAD(
+CMLIB_FILE_DOWNLOAD(
 	URI         "${VALID_GIT_URI}"
 	GIT_PATH    "${VALID_GIT_FILE_PATH}"
 	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/UTILS_NEW_NAME.cmake"
@@ -53,7 +53,7 @@ BIMCM_FILE_DOWNLOAD(
 #
 # Download and store file under remote name
 #
-BIMCM_FILE_DOWNLOAD(
+CMLIB_FILE_DOWNLOAD(
 	URI         "${VALID_HTTP_PLUGIN_URI}"
 	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/"
 )
@@ -61,7 +61,7 @@ BIMCM_FILE_DOWNLOAD(
 #
 # Download and store file under choosen name (http_plugin.zip)
 #
-BIMCM_FILE_DOWNLOAD(
+CMLIB_FILE_DOWNLOAD(
 	URI         "${VALID_HTTP_PLUGIN_URI}"
 	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/http_plugin.zip"
 )
