--- a/test/DEPENDENCY/argument_missing/CMakeLists.txt
+++ b/test/DEPENDENCY/argument_missing/CMakeLists.txt
@@ -12,11 +12,11 @@
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
 	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-	PROJECT(BIMCM_ARCHIVE_TEST)
+	PROJECT(CMLIB_ARCHIVE_TEST)
 ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 SET(GIT_DOWNLOAD_URI "ssh://git@stash.bimproject.cz:7999/bpcomm/cmake-lib-test.git")
 
@@ -24,7 +24,7 @@ SET(GIT_DOWNLOAD_URI "ssh://git@stash.bimproject.cz:7999/bpcomm/cmake-lib-test.g
 # Download zip as FILE
 # Comment out OUTPUT_PATH_VAR --> function omit error
 #
-BIMCM_DEPENDENCY(
+CMLIB_DEPENDENCY(
 	KEYWORDS GIT ZIP FILE
 	TYPE FILE
 	URI "${GIT_DOWNLOAD_URI}"
