--- a/test/FILE_DOWNLOAD/CMakeLists.txt
+++ b/test/FILE_DOWNLOAD/CMakeLists.txt
@@ -1,11 +1,11 @@
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
 	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-	PROJECT(BIMCM_CACHE_TEST)
+	PROJECT(CMLIB_CACHE_TEST)
 ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
@@ -32,7 +32,7 @@ SET(TEST_BRANCH_NAME "test-branch")
 FUNCTION(HTTP_DOWNLOAD)
 	SET(output_path "${CMAKE_CURRENT_BINARY_DIR}/test.txt")
 	FILE(REMOVE "${output_path}")
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${INVALID_HTTP_URI}"
 		STATUS_VAR status
 		OUTPUT_PATH "${output_path}"
@@ -40,7 +40,7 @@ FUNCTION(HTTP_DOWNLOAD)
 	TEST_VAR_FALSE(status)
 	TEST_VAR_PATH_NOT_EXISTS(output_path)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_HTTP_URI}"
 		STATUS_VAR status
 		OUTPUT_PATH "${output_path}"
@@ -52,7 +52,7 @@ ENDFUNCTION()
 FUNCTION(HTTP_DOWNLOAD_URI_TYPE)
 	SET(output_path "${CMAKE_CURRENT_BINARY_DIR}/test.txt")
 	FILE(REMOVE "${output_path}")
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI_TYPE HTTP
 		URI "${INVALID_HTTP_URI}"
 		STATUS_VAR status
@@ -61,7 +61,7 @@ FUNCTION(HTTP_DOWNLOAD_URI_TYPE)
 	TEST_VAR_FALSE(status)
 	TEST_VAR_PATH_NOT_EXISTS(output_path)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI_TYPE HTTP
 		URI "${VALID_HTTP_URI}"
 		STATUS_VAR status
@@ -74,13 +74,13 @@ ENDFUNCTION()
 FUNCTION(HTTP_DOWNLOAD_NO_STATUS)
 	SET(output_path "${CMAKE_CURRENT_BINARY_DIR}/test.txt")
 	FILE(REMOVE "${output_path}")
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${INVALID_HTTP_URI}"
 		OUTPUT_PATH "${output_path}"
 	)
 	TEST_VAR_PATH_NOT_EXISTS(output_path)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_HTTP_URI}"
 		STATUS_VAR status
 		OUTPUT_PATH "${output_path}"
@@ -91,14 +91,14 @@ ENDFUNCTION()
 FUNCTION(HTTP_DOWNLOAD_URI_TYPE_NO_STATUS)
 	SET(output_path "${CMAKE_CURRENT_BINARY_DIR}/test.txt")
 	FILE(REMOVE "${output_path}")
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI_TYPE HTTP
 		URI "${INVALID_HTTP_URI}"
 		OUTPUT_PATH "${output_path}"
 	)
 	TEST_VAR_PATH_NOT_EXISTS(output_path)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI_TYPE HTTP
 		URI "${VALID_HTTP_URI}"
 		OUTPUT_PATH "${output_path}"
@@ -139,7 +139,7 @@ FUNCTION(GIT_DOWNLOAD uri_type_option explicit_file_name status_check)
 	ENDIF()
 
 	FILE(REMOVE "${tmp}")
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${INVALID_GIT_URI}"
 		GIT_PATH "${VALID_GIT_FILE_PATH}"
 		OUTPUT_PATH "${output_path}"
@@ -151,7 +151,7 @@ FUNCTION(GIT_DOWNLOAD uri_type_option explicit_file_name status_check)
 	ENDIF()
 	TEST_VAR_PATH_NOT_EXISTS(tmp)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_GIT_URI}"
 		GIT_PATH "${INVALID_GIT_FILE_PATH}"
 		STATUS_VAR status
@@ -164,7 +164,7 @@ FUNCTION(GIT_DOWNLOAD uri_type_option explicit_file_name status_check)
 	ENDIF()
 	TEST_VAR_PATH_NOT_EXISTS(tmp)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_GIT_URI}"
 		GIT_PATH ${VALID_GIT_FILE_PATH}
 		STATUS_VAR status
@@ -178,7 +178,7 @@ FUNCTION(GIT_DOWNLOAD uri_type_option explicit_file_name status_check)
 	TEST_VAR_PATH_EXISTS(tmp)
 	FILE(REMOVE ${tmp})
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_GIT_URI}"
 		GIT_PATH ${VALID_GIT_REVISION_FILE_PATH}
 		GIT_REVISION "${TEST_BRANCH_NAME}"
@@ -210,7 +210,7 @@ FUNCTION(GIT_DOWNLOAD_DIRECTORY uri_type_option explicit_file_name status_check)
 
 	SET(output_path)
 	SET(test_branch_output_path)
-	IF(BIMCM_DEBUG)
+	IF(CMLIB_DEBUG)
 		SET(output_path "${CMAKE_CURRENT_BINARY_DIR}/git_directory_${i}")
 		SET(test_branch_output_path "${CMAKE_CURRENT_BINARY_DIR}/test_branch_git_directory_${i}")
 	ELSE()
@@ -221,7 +221,7 @@ FUNCTION(GIT_DOWNLOAD_DIRECTORY uri_type_option explicit_file_name status_check)
 	SET(test_branch_tmp "${test_branch_output_path}/")
 
 	FILE(REMOVE_RECURSE "${tmp}")
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${INVALID_GIT_URI}"
 		GIT_PATH "${VALID_GIT_DIRECTORY_PATH}"
 		OUTPUT_PATH "${output_path}"
@@ -233,7 +233,7 @@ FUNCTION(GIT_DOWNLOAD_DIRECTORY uri_type_option explicit_file_name status_check)
 	ENDIF()
 	TEST_VAR_PATH_NOT_EXISTS(tmp)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_GIT_URI}"
 		GIT_PATH "${INVALID_GIT_FILE_PATH}"
 		STATUS_VAR status
@@ -246,7 +246,7 @@ FUNCTION(GIT_DOWNLOAD_DIRECTORY uri_type_option explicit_file_name status_check)
 	ENDIF()
 	TEST_VAR_PATH_NOT_EXISTS(tmp)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_GIT_URI}"
 		GIT_PATH ${VALID_GIT_DIRECTORY_PATH}
 		STATUS_VAR status
@@ -259,7 +259,7 @@ FUNCTION(GIT_DOWNLOAD_DIRECTORY uri_type_option explicit_file_name status_check)
 	ENDIF()
 	TEST_VAR_PATH_EXISTS(tmp)
 
-	BIMCM_FILE_DOWNLOAD(
+	CMLIB_FILE_DOWNLOAD(
 		URI "${VALID_GIT_URI}"
 		GIT_PATH ${VALID_GIT_REVISION_DIRECTORY_PATH}
 		GIT_REVISION ${TEST_BRANCH_NAME}
@@ -277,7 +277,7 @@ ENDFUNCTION()
 
 
 
-FILE(REMOVE_RECURSE "${BIMCM_REQUIRED_ENV_TMP_PATH}")
+FILE(REMOVE_RECURSE "${CMLIB_REQUIRED_ENV_TMP_PATH}")
 HTTP_DOWNLOAD()
 HTTP_DOWNLOAD_URI_TYPE()
 HTTP_DOWNLOAD_NO_STATUS()
@@ -294,4 +294,4 @@ GIT_DOWNLOAD_DIRECTORY(OFF OFF ON)
 GIT_DOWNLOAD_DIRECTORY(OFF ON ON)
 GIT_DOWNLOAD_DIRECTORY(ON OFF ON)
 GIT_DOWNLOAD_DIRECTORY(OFF ON OFF)
-FILE(REMOVE_RECURSE "${BIMCM_REQUIRED_ENV_TMP_PATH}")
+FILE(REMOVE_RECURSE "${CMLIB_REQUIRED_ENV_TMP_PATH}")
