--- a/test/STORAGE/CMakeLists.txt
+++ b/test/STORAGE/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
 	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-	PROJECT(BIMCM_ENV_TEST)
+	PROJECT(CMLIB_ENV_TEST)
 ENDIF()
 
 GET_CMAKE_PROPERTY(orig_variable_names VARIABLES)
@@ -9,15 +9,15 @@ LIST(SORT orig_variable_names)
 LIST(LENGTH orig_variable_names orig_variable_names_size)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(BIMCM COMPONENTS STORAGE)
+FIND_PACKAGE(CMLIB COMPONENTS STORAGE)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
-SET(BIMCM_TEST_TEMPLATE "TestTemplateString<Aaa>Jupik<BAA><B>.txt")
+SET(CMLIB_TEST_TEMPLATE "TestTemplateString<Aaa>Jupik<BAA><B>.txt")
 
-BIMCM_STORAGE_TEMPLATE_INSTANCE(
+CMLIB_STORAGE_TEMPLATE_INSTANCE(
 	output_var
-	BIMCM_TEST_TEMPLATE
+	CMLIB_TEST_TEMPLATE
 	AaA OKA
 	BAA OKb
 	B s
@@ -26,9 +26,9 @@ IF(NOT "${output_var}" STREQUAL "TestTemplateStringOKAJupikOKbs.txt")
 	MESSAGE(FATAL_ERROR "Not equal A")
 ENDIF()
 
-BIMCM_STORAGE_TEMPLATE_INSTANCE(
+CMLIB_STORAGE_TEMPLATE_INSTANCE(
 	output_var_uncomplete
-	BIMCM_TEST_TEMPLATE
+	CMLIB_TEST_TEMPLATE
 	AaA OKA
 	BAA OKb
 )
@@ -37,7 +37,7 @@ IF(NOT "${output_var_uncomplete}" STREQUAL "TestTemplateStringOKAJupikOKb<B>.txt
 ENDIF()
 
 SET(output_var)
-BIMCM_STORAGE_TEMPLATE_INSTANCE(
+CMLIB_STORAGE_TEMPLATE_INSTANCE(
 	output_var
 	output_var_uncomplete
 	B works!
