--- a/test/ARCHIVE/CMakeLists.txt
+++ b/test/ARCHIVE/CMakeLists.txt
@@ -1,10 +1,10 @@
 IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
 	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-	PROJECT(BIMCM_ARCHIVE_TEST)
+	PROJECT(CMLIB_ARCHIVE_TEST)
 ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
@@ -19,17 +19,17 @@ FUNCTION(TEST_EXTRACT archive_name archive_type)
 		SET(archive_type_arg ARCHIVE_TYPE ${archive_type})
 	ENDIF()
 
-	BIMCM_ARCHIVE_EXTRACT(
+	CMLIB_ARCHIVE_EXTRACT(
 		ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/archive/${archive_name}"
 		${archive_type_arg}
 		OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${archive_name}/"
 	)
-	BIMCM_ARCHIVE_EXTRACT(
+	CMLIB_ARCHIVE_EXTRACT(
 		ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/archive/${archive_name}"
 		${archive_type_arg}
 		OUTPUT_PATH_VAR var
 	)
-	_BIMCM_LIBRARY_DEBUG_MESSAGE("Output path for archive: ${var}")	
+	_CMLIB_LIBRARY_DEBUG_MESSAGE("Output path for archive: ${var}")	
 	TEST_VAR_PATH_EXISTS(var)
 ENDFUNCTION()
 
