--- a/test/ARCHIVE/invalid_archive_type_test/CMakeLists.txt
+++ b/test/ARCHIVE/invalid_archive_type_test/CMakeLists.txt
@@ -1,16 +1,16 @@
 
 IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
 	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-	PROJECT(BIMCM_ARCHIVE_TEST)
+	PROJECT(CMLIB_ARCHIVE_TEST)
 ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 SET(archive_name archive.bz2)
 SET(output_dir "${CMAKE_CURRENT_BINARY_DIR}/${archive_name}/")
 FILE(MAKE_DIRECTORY ${output_dir})
-BIMCM_ARCHIVE_EXTRACT(
+CMLIB_ARCHIVE_EXTRACT(
 	ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/../archive/${archive_name}"
 	ARCHIVE_TYPE "invalid_archive_type"
 	OUTPUT_DIRECTORY "${output_dir}"
