--- a/test/ARCHIVE/invalid_output_var/CMakeLists.txt
+++ b/test/ARCHIVE/invalid_output_var/CMakeLists.txt
@@ -8,15 +8,15 @@
 
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-PROJECT(BIMCM_ARCHIVE_TEST)
+PROJECT(CMLIB_ARCHIVE_TEST)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 SET(archive_name archive.bz2)
 SET(output_dir "${CMAKE_CURRENT_BINARY_DIR}/${archive_name}/")
 FILE(MAKE_DIRECTORY ${output_dir})
-BIMCM_ARCHIVE_EXTRACT(
+CMLIB_ARCHIVE_EXTRACT(
 	ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/../archive/${archive_name}"
 	ARCHIVE_TYPE "BZ2"
 	OUTPUT_DIRECTORY "${output_dir}"
