--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -1,11 +1,11 @@
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
 	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-	PROJECT(BIMCM_CACHE_TEST)
+	PROJECT(CMLIB_CACHE_TEST)
 ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
@@ -25,7 +25,7 @@ SET(GIT_ZIP_CONTENT cmake1.png Release_CMake.jpg)
 
 
 FUNCTION(DEPENDENCY_HTTP_DOWNLOAD)
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS HTTP A B FILE
 		TYPE FILE
 		URI "${HTTP_DOWNLOAD_URI_ZIP}"
@@ -37,7 +37,7 @@ FUNCTION(DEPENDENCY_HTTP_DOWNLOAD)
 	GET_FILENAME_COMPONENT(filename_dependency "${output_path}" NAME)
 	TEST_VAR_EQUAL(filename filename_dependency)
 
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS A B ARCHIVE
 		TYPE ARCHIVE
 		URI "${HTTP_DOWNLOAD_URI_ZIP}"
@@ -59,7 +59,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	ENDIF()
 
 	# Download zip as FILE
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS GIT ZIP FILE
 		TYPE FILE
 		URI "${GIT_DOWNLOAD_URI}"
@@ -70,7 +70,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	TEST_VAR_PATH_EXISTS(output_path)
 
 	# Download zip as ARCHIVE
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS GIT ZIP ARCHIVE
 		TYPE ARCHIVE
 		URI "${GIT_DOWNLOAD_URI}"
@@ -89,7 +89,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	ENDFOREACH()
 	
 	SET(output_path_directory)
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 			KEYWORDS GIT DIRECTORY A
 			TYPE DIRECTORY
 			URI "${GIT_DOWNLOAD_URI}"
@@ -100,7 +100,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	TEST_VAR_PATH_EXISTS(output_path_directory)
 
 	SET(_tmp_cmake_path ${CMAKE_MODULE_PATH})
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS GIT MODULE MASTER
 		TYPE MODULE
 		URI "${GIT_DOWNLOAD_URI}"
@@ -111,7 +111,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
 
 	SET(test_output_path "testik")
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS GIT MODULE TESTBRANCH
 		TYPE MODULE
 		URI "${GIT_DOWNLOAD_URI}"
@@ -127,7 +127,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
 
 
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS GIT MODULE TESTBRANCHWF1
 		TYPE MODULE
 		URI "${GIT_DOWNLOAD_URI}"
@@ -138,7 +138,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	TEST_MODULE_MACRO()
 	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
 
-	BIMCM_DEPENDENCY(
+	CMLIB_DEPENDENCY(
 		KEYWORDS GIT MODULE TESTBRANCHWF2
 		TYPE MODULE
 		URI "${GIT_DOWNLOAD_URI}"
