--- a/test/PARSE_ARGUMENTS/CMakeLists.txt
+++ b/test/PARSE_ARGUMENTS/CMakeLists.txt
@@ -1,11 +1,11 @@
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
 	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
-	PROJECT(BIMCM_CACHE_TEST)
+	PROJECT(CMLIB_CACHE_TEST)
 ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(BIMCM)
+FIND_PACKAGE(CMLIB)
 
 
 
@@ -40,7 +40,7 @@ FUNCTION(TEST_PARSE options single multiple)
 		)
 	ENDIF()
 
-	BIMCM_PARSE_ARGUMENTS(
+	CMLIB_PARSE_ARGUMENTS(
 		${options_arg}
 		${single_arg}
 		${multi_arg}
