--- a/test/DEPENDENCY/duplicated_dependency/without_keywords/CMakeLists.txt
+++ b/test/DEPENDENCY/duplicated_dependency/without_keywords/CMakeLists.txt
@@ -10,7 +10,7 @@ IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
 	PROJECT(CMLIB_ARCHIVE_TEST)
 ENDIF()
 
-LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../")
 FIND_PACKAGE(CMLIB)
 
 SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
@@ -18,7 +18,6 @@ SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 
 CMLIB_DEPENDENCY(
-	KEYWORDS GIT ZIP FILE
 	TYPE FILE
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "test-branch"
@@ -27,7 +26,6 @@ CMLIB_DEPENDENCY(
 )
 
 CMLIB_DEPENDENCY(
-	KEYWORDS GIT ZIP FILE2
 	TYPE FILE
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_PATH     "TEST_MODULE.cmake"
@@ -35,7 +33,6 @@ CMLIB_DEPENDENCY(
 )
 
 CMLIB_DEPENDENCY(
-	KEYWORDS GIT ZIP FILE3
 	TYPE FILE
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "test-branch"
