--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -15,11 +15,9 @@ FIND_PACKAGE(CMLIB)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
-GET_FILENAME_COMPONENT(base_url "${CMLIB_REQUIRED_ENV_REMOTE_URL}" DIRECTORY)
-
-SET(HTTP_DOWNLOAD_URI_ZIP       "${base_url}/cmakelib-test/archive/v1.0.0.zip")
-SET(GIT_DOWNLOAD_URI            "${base_url}/cmakelib-test.git")
-	SET(GIT_PATH_FILE               "cmake/README.txt")
+SET(HTTP_DOWNLOAD_URI_ZIP       "https://github.com/cmakelib/cmakelib-test/archive/v1.0.0.zip")
+SET(GIT_DOWNLOAD_URI            "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
+SET(GIT_PATH_FILE               "cmake/README.txt")
 SET(GIT_PATH_ZIP                "cmake/dir_a/test.zip")
 SET(GIT_PATH_DIRECTORY          "cmake/")
 SET(GIT_REVISION_PATH_FILE      "cmake-test/test_branch_README.txt")
