--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -26,9 +26,10 @@ jobs:
         image: cmakelib/build-linux:latest-ubuntu-1804
     steps:
       - uses: actions/checkout@v2
-      - name: Run tests
-      - run: git remote add origin ${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}
-      - run: cmake test/
+      - name: Add origin
+        run: git remote add origin ${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}
+      - name: Run Tests
+        run: cmake test/
 
   test_ubuntu_2004:
     runs-on: ubuntu-latest
@@ -37,4 +38,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-      - run: cmake test/
+        run: cmake test/
