--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -28,10 +28,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Add origin
         run: git remote add origin $REPO_URL
+        env:
+          REPO_URL: ${{ github.repositoryUrl }}
       - name: Run Tests
         run: cmake test/
-      - env:
-          REPO_URL: ${{ github.repositoryUrl }}
           
   test_ubuntu_2004:
     runs-on: ubuntu-latest
