--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -28,8 +28,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Add origin
         env:
-          REPO_URL: ${{ github.repositoryUrl }}
-        run: git remote add origin $REPO_URL
+          REPO_URL_TEST: ${{ github.repositoryUrl }}
+        run: git remote add origin "$REPO_URL_TEST"
       - name: Run Tests
         run: cmake test/
           
