--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -43,3 +43,17 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run tests
         run: cmake test/
+        
+  test_windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: cmake test/
+  
+  test_macosx:
+    runs-on: macosx-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: cmake test/
