--- a/test/DEPENDENCY/duplicated_dependency/CMakeLists.txt
+++ b/test/DEPENDENCY/duplicated_dependency/CMakeLists.txt
@@ -23,6 +23,14 @@ SET(mixed_keywords_first_expected_errmsg
 SET(mixed_no_keywords_first_expected_errmsg
 	"DEPENDENCY hash mishmash - cache created without keywords but keywords\n *provided 'A;B;C'")
 
-TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/keywords"                "${keywords_expected_errmsg}")
-TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/mixed_keywords_first"    "${mixed_keywords_first_expected_errmsg}")
-TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/mixed_no_keywords_first" "${mixed_no_keywords_first_expected_errmsg}")
+SET(keywords_with_different_remote_expected_msg 
+	"The cache under keywords 'A;B;C' already exist for different remote")
+
+TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/keywords"
+	"${keywords_expected_errmsg}")
+TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/mixed_keywords_first"
+	"${mixed_keywords_first_expected_errmsg}")
+TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/mixed_no_keywords_first"
+	"${mixed_no_keywords_first_expected_errmsg}")
+TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/keywords_with_different_keywords"
+	"${keywords_with_different_remote_expected_errmsg}")
