--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Linux tests
+name: Tests
 
 on:
   push:
@@ -28,3 +28,18 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run tests
         run: cmake test/
+
+  test_macos_11:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: cmake test/
+
+  test_windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: cmake test/
+  
