--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -133,16 +133,16 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
 
 
-	CMLIB_DEPENDENCY(
-		KEYWORDS GIT MODULE TESTBRANCHWF1
-		TYPE MODULE
-		URI "${GIT_DOWNLOAD_URI}"
-		GIT_REVISION "${GIT_REVISION_NAME}"
-		OUTPUT_PATH_VAR test_output_path
-	)
-	INCLUDE(TEST_MODULE)
-	TEST_MODULE_MACRO()
-	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
+#		CMLIB_DEPENDENCY(
+#		KEYWORDS GIT MODULE TESTBRANCHWF1
+#		TYPE MODULE
+#		URI "${GIT_DOWNLOAD_URI}"
+#		GIT_REVISION "${GIT_REVISION_NAME}"
+#		OUTPUT_PATH_VAR test_output_path
+#	)
+#	INCLUDE(TEST_MODULE)
+#	TEST_MODULE_MACRO()
+#	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
 
 	CMLIB_DEPENDENCY(
 		KEYWORDS GIT MODULE TESTBRANCHWF2
