--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -144,15 +144,15 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 #	TEST_MODULE_MACRO()
 #	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
 
-	CMLIB_DEPENDENCY(
-		KEYWORDS GIT MODULE TESTBRANCHWF2
-		TYPE MODULE
-		URI "${GIT_DOWNLOAD_URI}"
-		OUTPUT_PATH_VAR test_output_path
-	)
-	INCLUDE(TEST_MODULE)
-	TEST_MODULE_MACRO()
-	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
+#	CMLIB_DEPENDENCY(
+#		KEYWORDS GIT MODULE TESTBRANCHWF2
+#		TYPE MODULE
+#		URI "${GIT_DOWNLOAD_URI}"
+#		OUTPUT_PATH_VAR test_output_path
+#	)
+#	INCLUDE(TEST_MODULE)
+#	TEST_MODULE_MACRO()
+#	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
 ENDFUNCTION()
 
 FUNCTION(DEPENDENCY_INVALID_ARGUMENTS)
