--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Tests - Script mode
+name: Tests
 
 on:
   push:
@@ -18,9 +18,27 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
+        run: cd test/ && cmake .
+
+  test_debian_buster_script:
+    runs-on: ubuntu-latest
+    container:
+        image: cmakelib/build-linux:latest-debian-buster
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
         run: cd test/ && cmake -P ./CMakeLists.txt
           
   test_ubuntu_2004:
+    runs-on: ubuntu-latest
+    container:
+        image: cmakelib/build-linux:latest-ubuntu-2004
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: cd test/ && cmake .
+
+  test_ubuntu_2004_script:
     runs-on: ubuntu-latest
     container:
         image: cmakelib/build-linux:latest-ubuntu-2004
@@ -34,9 +52,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
+        run: cd test && cmake .
+
+  test_macos_11_script:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
         run: cd test && cmake -P ./CMakeLists.txt
 
   test_windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: cd test/ && cmake .
+
+  test_windows_script:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
