Bugfixes and documentation

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,74 +4,63 @@ on:
   push:
     branches:
       - master
-#pull_request:
+#  pull_request:
 #    branches:
 #      - '*'
-
   workflow_dispatch:
   
-jobs:   
-  test_debian_buster:
+jobs:
+  test_linux:
+    strategy:
+      matrix:
+        image: ["latest-debian-buster", "latest-ubuntu-2004", "latest-ubuntu-1804"]
     runs-on: ubuntu-latest
     container:
-        image: cmakelib/build-linux:latest-debian-buster
+        image: cmakelib/build-linux:${{ matrix.image }}
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-        run: cd test/ && cmake .
-
-  test_debian_buster_script:
+        run: |
+            cd test/ && cmake -DCMLIB_DEBUG=ON .
+            
+  test_linux_script:
+    strategy:
+      matrix:
+        image: ["latest-debian-buster", "latest-ubuntu-2004", "latest-ubuntu-1804"]
     runs-on: ubuntu-latest
     container:
-        image: cmakelib/build-linux:latest-debian-buster
+        image: cmakelib/build-linux:${{ matrix.image }}
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-        run: cd test/ && cmake -P ./CMakeLists.txt
-          
-  test_ubuntu_2004:
-    runs-on: ubuntu-latest
-    container:
-        image: cmakelib/build-linux:latest-ubuntu-2004
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run tests
-        run: cd test/ && cmake .
-
-  test_ubuntu_2004_script:
-    runs-on: ubuntu-latest
-    container:
-        image: cmakelib/build-linux:latest-ubuntu-2004
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run tests
-        run: cd test/ && cmake -P ./CMakeLists.txt
+        run: |
+            cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
   test_macos_11:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-        run: cd test && cmake .
+        run: cd test && cmake -DCMLIB_DEBUG=ON .
 
   test_macos_11_script:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-        run: cd test && cmake -P ./CMakeLists.txt
+        run: cd test && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
   test_windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-        run: cd test/ && cmake .
+        run: cd test/ && cmake -DCMLIB_DEBUG=ON .
 
   test_windows_script:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-        run: cd test/ && cmake -P ./CMakeLists.txt
+        run: cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
   
