--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,9 +11,9 @@ INCLUDE("${CMAKE_CURRENT_LIST_DIR}/TEST.cmake")
 
 
 
-RUN_TEST(ARCHIVE)
-RUN_TEST(CACHE)
-RUN_TEST(FILE_DOWNLOAD)
-RUN_TEST(PARSE_ARGUMENTS)
-RUN_TEST(REQUIRED_ENV)
-RUN_TEST(DEPENDENCY)
+TEST_RUN(ARCHIVE)
+TEST_RUN(CACHE)
+TEST_RUN(FILE_DOWNLOAD)
+TEST_RUN(PARSE_ARGUMENTS)
+TEST_RUN(REQUIRED_ENV)
+TEST_RUN(DEPENDENCY)
