--- a/example/FILE_DOWNLOAD/CMakeLists.txt
+++ b/example/FILE_DOWNLOAD/CMakeLists.txt
@@ -4,11 +4,11 @@ PROJECT(CMLIB_CACHE_TEST)
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
 FIND_PACKAGE(CMLIB)
 
-SET(VALID_HTTP_URI "http://bimproject.cz/")
-SET(VALID_HTTP_PLUGIN_URI "http://bimproject.cz/data/plugins/release/BPC.AC.WIN.zip")
-SET(VALID_GIT_URI "ssh://git@stash.bimproject.cz:7999/bpcomm/utils.git")
-SET(VALID_GIT_FILE_PATH   "cmake/UTILS.cmake")
-SET(VALID_GIT_DIRECTORY_PATH   "cmake/")
+SET(VALID_HTTP_URI           "http://cmake.org/")
+SET(VALID_HTTP_CMAKE_URI     "https://github.com/Kitware/CMake/releases/download/v3.18.5/cmake-3.18.5-win64-x64.zip")
+SET(VALID_GIT_URI            "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
+SET(VALID_GIT_FILE_PATH      "cmake/UTILS.cmake")
+SET(VALID_GIT_DIRECTORY_PATH "cmake/")
 
 
 
@@ -54,7 +54,7 @@ CMLIB_FILE_DOWNLOAD(
 # Download and store file under remote name
 #
 CMLIB_FILE_DOWNLOAD(
-	URI         "${VALID_HTTP_PLUGIN_URI}"
+	URI         "${VALID_HTTP_CMAKE_URI}"
 	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/"
 )
 
@@ -62,6 +62,6 @@ CMLIB_FILE_DOWNLOAD(
 # Download and store file under choosen name (http_plugin.zip)
 #
 CMLIB_FILE_DOWNLOAD(
-	URI         "${VALID_HTTP_PLUGIN_URI}"
-	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/http_plugin.zip"
+	URI         "${VALID_HTTP_CMAKE_URI}"
+	OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/cmake.zip"
 )
