--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -16,6 +16,8 @@ FIND_PACKAGE(CMLIB)
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
 SET(HTTP_DOWNLOAD_URI_ZIP       "https://github.com/cmakelib/cmakelib-test/archive/v1.0.0.zip")
+SET(HTTP_DOWNLOAD_URI_ZIP2      "https://github.com/cmakelib/cmakelib-test/archive/v1.1.0.zip")
+SET(HTTP_DOWNLOAD_URI_ZIP3      "https://github.com/cmakelib/cmakelib-test/archive/v1.2.0.zip")
 SET(GIT_DOWNLOAD_URI            "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 SET(GIT_PATH_FILE               "cmake/README.txt")
 SET(GIT_PATH_ZIP                "cmake/dir_a/test.zip")
@@ -50,7 +52,7 @@ FUNCTION(DEPENDENCY_HTTP_DOWNLOAD)
 		OUTPUT_PATH_VAR output_path_archive
 	)
 	TEST_VAR_PATH_EXISTS(output_path_archive)
-	TEST_VAR_PATH_IS_DIRECTORY(output_path_archive)	
+	TEST_VAR_PATH_IS_DIRECTORY(output_path_archive)
 ENDFUNCTION()
 
 FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
@@ -93,7 +95,7 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 			MESSAGE(FATAL_ERROR "Invalid content ${extracted_file}")
 		ENDIF()
 	ENDFOREACH()
-	
+
 	SET(output_path_directory)
 	CMLIB_DEPENDENCY(
 			KEYWORDS GIT DIRECTORY A
@@ -136,26 +138,44 @@ FUNCTION(DEPENDENCY_GIT_DOWNLOAD test_branch_files)
 # These tests does not pass in Github actions.
 # I really do not known why
 #
-#	CMLIB_DEPENDENCY(
-#		KEYWORDS GIT MODULE TESTBRANCHWF1
-#		TYPE MODULE
-#		URI "${GIT_DOWNLOAD_URI}"
-#		GIT_REVISION "${GIT_REVISION_NAME}"
-#		OUTPUT_PATH_VAR test_output_path
-#	)
-#	INCLUDE(TEST_MODULE)
-#	TEST_MODULE_MACRO()
-#	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
-#
-#	CMLIB_DEPENDENCY(
-#		KEYWORDS GIT MODULE TESTBRANCHWF2
-#		TYPE MODULE
-#		URI "${GIT_DOWNLOAD_URI}"
-#		OUTPUT_PATH_VAR test_output_path
-#	)
-#	INCLUDE(TEST_MODULE)
-#	TEST_MODULE_MACRO()
-#	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
+	CMLIB_DEPENDENCY(
+		KEYWORDS GIT MODULE TESTBRANCHWF1
+		TYPE MODULE
+		URI "${GIT_DOWNLOAD_URI}"
+		GIT_REVISION "${GIT_REVISION_NAME}"
+		URI_TYPE GIT
+		OUTPUT_PATH_VAR test_output_path
+	)
+	INCLUDE(TEST_MODULE)
+	TEST_MODULE_MACRO()
+	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
+
+	CMLIB_DEPENDENCY(
+		KEYWORDS GIT MODULE TESTBRANCHWF2
+		TYPE MODULE
+		URI "${GIT_DOWNLOAD_URI}"
+		URI_TYPE GIT
+		OUTPUT_PATH_VAR test_output_path
+	)
+	INCLUDE(TEST_MODULE)
+	TEST_MODULE_MACRO()
+	SET(CMAKE_MODULE_PATH ${_tmp_cmake_path})
+ENDFUNCTION()
+
+FUNCTION(DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS)
+	CMLIB_DEPENDENCY(
+		URI "${HTTP_DOWNLOAD_URI_ZIP2}"
+		TYPE ARCHIVE
+		OUTPUT_PATH_VAR path_var_zip2
+	)
+	TEST_VAR_PATH_EXISTS(path_var_zip2)
+	CMLIB_DEPENDENCY(
+		URI "${HTTP_DOWNLOAD_URI_ZIP3}"
+		TYPE ARCHIVE
+		OUTPUT_PATH_VAR path_var_zip3
+	)
+	TEST_VAR_PATH_EXISTS(path_var_zip3)
+	TEST_VAR_NOT_EQUAL(path_var_zip2 path_var_zip3)
 ENDFUNCTION()
 
 FUNCTION(DEPENDENCY_INVALID_ARGUMENTS)
@@ -168,4 +188,4 @@ DEPENDENCY_HTTP_DOWNLOAD()
 DEPENDENCY_GIT_DOWNLOAD(ON)
 DEPENDENCY_GIT_DOWNLOAD(OFF)
 DEPENDENCY_INVALID_ARGUMENTS()
-
+DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
